fix format and broken code (wrapped in one line)

--- a/bible/static/style.css
+++ b/bible/static/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(237, 237, 237);
+    background-color: rgb(248, 248, 248);
 }
 
 .header {
@@ -10,6 +10,6 @@ form span {
     font-style: italic;
 }
 
-form label {
-    font-weight: bold;
+label {
+    font-weight: 800;
 }
